--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                 <div class="col-5">
                     <h2>Quem foi LIL PEEP? </h2>
                     <p class="p-2">Lil Peep (Gustav Elijah Åhr, 1996–2017) foi um rapper e cantor norte-americano, pioneiro do emo rap. Nascido na Pensilvânia e criado em Nova York, misturava trap, emo e pop punk, com letras sobre depressão, drogas e relacionamentos. Ganhou fama no SoundCloud com mixtapes como Crybaby (2016) e Hellboy (2016) e o álbum Come Over When You're Sober, Pt. 1 (2017). Ícone da moda e abertamente bissexual, morreu aos 21 anos de overdose acidental de fentanil e Xanax. Seu legado inclui o álbum póstumo Come Over When You're Sober, Pt. 2 (2018).
-                   
+                   ㅤㅤ
+                        ㅤㅤ
+                        ㅤㅤㅤㅤ
                     Wikipédia (português e inglês), AdoroCinema, G1, O Globo, Veja, Público, Last.fm, Boo.world e posts no X (@PortalLilPeepBR).
                     </p>
                 </div>
